# ump-keyboard

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  keyboard_controller.cpp  keyboard_controller.h  keyboard_widget.cpp  keyboard_widget.h  main.cpp  midi_ci_manager.cpp  midi_ci_manager.h  virtualized_control_list.cpp  virtualized_control_list.h
tests/: CMakeLists.txt  test_end_to_end_properties.cpp  test_midi_feedback_loop.cpp  test_properties_parsing.cpp  test_standard_properties.cpp
